# fq-manifestor

./: .gitignore  LICENSE  README.md  fq-manifestor  fq-manifestor.py  fq_manifestor.py  pyproject.toml
.github/workflows/: ci.yml
fq_manifestor/: __init__.py  _core.py  cli.py
tests/: test_core.py
